--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
     "main": "index.js",
     "license": "MIT",
     "dependencies": {
-        "three": "^0.131.3"
+        "three": "^0.148.0"
     },
     "scripts": {
         "watch": "parcel src/index.html"
     },
     "devDependencies": {
-        "@types/three": "^0.130.1",
-        "parcel": "^2.0.0-rc.0",
-        "@babel/core": "^7.14.8",
-        "@babel/preset-typescript": "^7.14.5",
-        "@babel/preset-env": "^7.14.9"
+        "@babel/core": "^7.20.7",
+        "@babel/preset-env": "^7.20.2",
+        "@babel/preset-typescript": "^7.18.6",
+        "@types/three": "^0.147.1",
+        "parcel": "^2.8.2"
     }
 }
